--- a/index.html
+++ b/index.html
@@ -11,14 +11,27 @@
     <section>
         <div class="container">
             <header>
-                <a href="">Logo</a>
+                <a href="" class="logo">Logo</a>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="" class="active">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Team</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </header>
+            <div class="content">
+                <h2>Glassmorophism Web</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi voluptatibus eaque, fuga pariatur quasi provident ipsum veritatis saepe consequuntur officia nihil sequi odit omnis nulla debitis laborum, ex sint itaque!</p>
+                <a href="">Read More</a>
+            </div>
+            <div class="imgBx">
+                <img src="/Images//ch3d.png" alt="">
+            </div>
+            <ul class="sci">
+                <li><a href=""><img src="/Icons/facebook.png" alt=""></a></li>
+                <li><a href=""><img src="/Icons/twitter.png" alt=""></a></li>
+                <li><a href=""><img src="/Icons/instagram.png" alt=""></a></li>
+            </ul>
         </div>
     </section>
 </body>
